# django-agenda

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  pyproject.toml
Snippets/: configRead.py  init.py
accounts/: apps.py  models.py  urls.py  views.py
accounts/templates/accounts/: dashboard.html  login.html  register.html
agenda/: asgi.py  settings.py  urls.py  wsgi.py
contatos/: admin.py  apps.py  models.py  urls.py  views.py
contatos/migrations/: 0001_initial.py
contatos/templates/contatos/: busca.html  index.html  ver_contato.html
templates/: base.html
templates/partials/: _nav.html
